Upgrade parent-oss to 2.3.1 and fix PMD violations